# rosneuro_feedback

./: CMakeLists.txt  feedback.py  package.xml  setup.py
launch/: carnival.launch  carnival.launch~  smr_launcher.launch
scripts/: carnival.py
src/: carnival.py~  carnival2.py~
src/rosneuro_feedback/: __init__.py  feedback.py  smr_calibration.py  smr_control.py  smr_control_continuous.py  smr_evaluation.py  smr_offline.py  smr_online.py  smr_utilities.py
src/rosneuro_feedback/draw/: Bar.py  Cue.py  Fixation.py  GUI.py  Window.py  __init__.py
