<?xml version="1.0"?>
<package format="2">
  <name>rosneuro_feedback</name>
  <version>0.0.0</version>
  <description>The rosneuro feedback package</description>

  <author email="stefano.tortora@phd.unipd.it">Stefano Tortora</author>
  <maintainer email="stefano.tortora@phd.unipd.it">Stefano Tortora</maintainer>

  <license>GPLv3</license>

  <buildtool_depend>catkin</buildtool_depend>
  <depend>rospy</depend>
  <depend>rosneuro_msgs</depend>

  <exec_depend>message_runtime</exec_depend>

</package>
